--- a/src/app/theme/pages/default/orders/orders.component.html
+++ b/src/app/theme/pages/default/orders/orders.component.html
@@ -3,7 +3,7 @@
 	<div class="d-flex align-items-center">
 		<div class="mr-auto">
 			<h3 class="m-subheader__title m-subheader__title--separator">
-				Local Data
+				Mis pedidos
 			</h3>
 			<ul class="m-subheader__breadcrumbs m-nav m-nav--inline">
 				<li class="m-nav__item m-nav__item--home">
@@ -17,7 +17,7 @@
 				<li class="m-nav__item">
 					<a href="" class="m-nav__link">
 						<span class="m-nav__link-text">
-							Datatables
+							Pedidos
 						</span>
 					</a>
 				</li>
@@ -27,24 +27,15 @@
 				<li class="m-nav__item">
 					<a href="" class="m-nav__link">
 						<span class="m-nav__link-text">
-							Base
-						</span>
-					</a>
-				</li>
-				<li class="m-nav__separator">
-					-
-				</li>
-				<li class="m-nav__item">
-					<a href="" class="m-nav__link">
-						<span class="m-nav__link-text">
-							Local Data
+							mis pedidos
 						</span>
 					</a>
 				</li>
 			</ul>
 		</div>
 		<div>
-			<div class="m-dropdown m-dropdown--inline m-dropdown--arrow m-dropdown--align-right m-dropdown--align-push" data-dropdown-toggle="hover" aria-expanded="true">
+			<div class="m-dropdown m-dropdown--inline m-dropdown--arrow m-dropdown--align-right m-dropdown--align-push" data-dropdown-toggle="hover"
+			 aria-expanded="true">
 				<a href="#" class="m-portlet__nav-link btn btn-lg btn-secondary  m-btn m-btn--outline-2x m-btn--air m-btn--icon m-btn--icon-only m-btn--pill  m-dropdown__toggle">
 					<i class="la la-plus m--hide"></i>
 					<i class="la la-ellipsis-h"></i>
@@ -114,7 +105,7 @@
 			<i class="flaticon-exclamation m--font-brand"></i>
 		</div>
 		<div class="m-alert__text">
-			The Metronic Datatable component supports local or remote data binding. For the local data binding you can pass javascript array as data source. In this example the grid fetches its data from a javascript array data source. It also defines the schema model of the data source. In addition to the visualization, the Datatable provides built-in support for operations over data such as sorting, filtering and paging performed in user browser(frontend).
+			Aqui encontraras tus ultimos 100 pedidos, podras verlos, aceptarlos o rechazarlos. Si desas ver los demas pedidos de este me pedes generar un reporte completo de este mes en la seccion pagos.
 		</div>
 	</div>
 	<div class="m-portlet m-portlet--mobile">
@@ -122,180 +113,137 @@
 			<div class="m-portlet__head-caption">
 				<div class="m-portlet__head-title">
 					<h3 class="m-portlet__head-text">
-						Local Datatable
+						Mis pedisos
 						<small>
-							initialized from javascript array
+							mas recientes
 						</small>
 					</h3>
 				</div>
 			</div>
-			<div class="m-portlet__head-tools">
-				<ul class="m-portlet__nav">
-					<li class="m-portlet__nav-item">
-						<div class="m-dropdown m-dropdown--inline m-dropdown--arrow m-dropdown--align-right m-dropdown--align-push" data-dropdown-toggle="hover" aria-expanded="true">
-							<a href="#" class="m-portlet__nav-link m-portlet__nav-link--icon m-portlet__nav-link--icon-xl m-dropdown__toggle">
-								<i class="la la-plus m--hide"></i>
-								<i class="la la-ellipsis-h m--font-brand"></i>
-							</a>
-							<div class="m-dropdown__wrapper">
-								<span class="m-dropdown__arrow m-dropdown__arrow--right m-dropdown__arrow--adjust"></span>
-								<div class="m-dropdown__inner">
-									<div class="m-dropdown__body">
-										<div class="m-dropdown__content">
-											<ul class="m-nav">
-												<li class="m-nav__section m-nav__section--first">
-													<span class="m-nav__section-text">
-														Quick Actions
-													</span>
-												</li>
-												<li class="m-nav__item">
-													<a href="" class="m-nav__link">
-														<i class="m-nav__link-icon flaticon-share"></i>
-														<span class="m-nav__link-text">
-															Create Post
-														</span>
-													</a>
-												</li>
-												<li class="m-nav__item">
-													<a href="" class="m-nav__link">
-														<i class="m-nav__link-icon flaticon-chat-1"></i>
-														<span class="m-nav__link-text">
-															Send Messages
-														</span>
-													</a>
-												</li>
-												<li class="m-nav__item">
-													<a href="" class="m-nav__link">
-														<i class="m-nav__link-icon flaticon-multimedia-2"></i>
-														<span class="m-nav__link-text">
-															Upload File
-														</span>
-													</a>
-												</li>
-												<li class="m-nav__section">
-													<span class="m-nav__section-text">
-														Useful Links
-													</span>
-												</li>
-												<li class="m-nav__item">
-													<a href="" class="m-nav__link">
-														<i class="m-nav__link-icon flaticon-info"></i>
-														<span class="m-nav__link-text">
-															FAQ
-														</span>
-													</a>
-												</li>
-												<li class="m-nav__item">
-													<a href="" class="m-nav__link">
-														<i class="m-nav__link-icon flaticon-lifebuoy"></i>
-														<span class="m-nav__link-text">
-															Support
-														</span>
-													</a>
-												</li>
-												<li class="m-nav__separator m-nav__separator--fit m--hide"></li>
-												<li class="m-nav__item m--hide">
-													<a href="#" class="btn btn-outline-danger m-btn m-btn--pill m-btn--wide btn-sm">
-														Submit
-													</a>
-												</li>
-											</ul>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</li>
-				</ul>
-			</div>
 		</div>
 		<div class="m-portlet__body">
 			<!--begin: Search Form -->
-			<div class="m-form m-form--label-align-right m--margin-top-20 m--margin-bottom-30">
-				<div class="row align-items-center">
-					<div class="col-xl-8 order-2 order-xl-1">
-						<div class="form-group m-form__group row align-items-center">
-							<div class="col-md-4">
-								<div class="m-form__group m-form__group--inline">
-									<div class="m-form__label">
-										<label>
-											Status:
-										</label>
-									</div>
-									<div class="m-form__control">
-										<select class="form-control m-bootstrap-select m-bootstrap-select--solid" id="m_form_status">
-											<option value="">
-												All
-											</option>
-											<option value="1">
-												Pending
-											</option>
-											<option value="2">
-												Delivered
-											</option>
-											<option value="3">
-												Canceled
-											</option>
-										</select>
-									</div>
-								</div>
-								<div class="d-md-none m--margin-bottom-10"></div>
-							</div>
-							<div class="col-md-4">
-								<div class="m-form__group m-form__group--inline">
-									<div class="m-form__label">
-										<label class="m-label m-label--single">
-											Type:
-										</label>
-									</div>
-									<div class="m-form__control">
-										<select class="form-control m-bootstrap-select m-bootstrap-select--solid" id="m_form_type">
-											<option value="">
-												All
-											</option>
-											<option value="1">
-												Online
-											</option>
-											<option value="2">
-												Retail
-											</option>
-											<option value="3">
-												Direct
-											</option>
-										</select>
-									</div>
-								</div>
-								<div class="d-md-none m--margin-bottom-10"></div>
-							</div>
-							<div class="col-md-4">
-								<div class="m-input-icon m-input-icon--left">
-									<input type="text" class="form-control m-input m-input--solid" placeholder="Search..." id="m_form_search">
-									<span class="m-input-icon__icon m-input-icon__icon--left">
-										<span>
-											<i class="la la-search"></i>
-										</span>
-									</span>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-xl-4 order-1 order-xl-2 m--align-right">
-						<a href="#" class="btn btn-accent m-btn m-btn--custom m-btn--icon m-btn--air m-btn--pill">
-							<span>
-								<i class="la la-cart-plus"></i>
-								<span>
-									New Order
-								</span>
-							</span>
-						</a>
-						<div class="m-separator m-separator--dashed d-xl-none"></div>
-					</div>
-				</div>
-			</div>
-			<!--end: Search Form -->
 			<!--begin: Datatable -->
 			<div class="m_datatable" id="ordersData"></div>
 			<!--end: Datatable -->
 		</div>
 	</div>
+	<!--begin::Modal-->
+	<div class="modal fade" id="m_modal_4" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="exampleModalLabel">
+						Detalles
+					</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">
+							&times;
+						</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<div class="row">
+						<div class="col-md-6">
+
+							<img alt="" src={{shop.logoUrl}} style="border-radius: 0.5em;max-height: 50px;display: inline-block;vertical-align: sub;">
+							<div style="display:inline-block;margin-left: 0.5em;">
+								<p class="shopInfo" style="font-weight: bold;">{{shop.name}}</p>
+								<p class="shopInfo">{{shop.billing.address}}</p>
+								<p class="shopInfo">{{shop.billing.phone}}</p>
+							</div>
+
+						</div>
+						<div class="col-md-3"></div>
+						<div class="col-md-3">
+							<h3 style="margin-top: 0.5em;text-align: right;">FACTURA</h3>
+						</div>
+					</div>
+					<div class="row" style="margin-top: 1em;">
+						<div class="col-md-3">
+							<h6>Factura a:</h6>
+							<p class="shopInfo">{{selectedOrder.billing.name}}</p>
+							<p class="shopInfo">{{selectedOrder.billing.ci}}</p>
+							<p class="shopInfo">{{selectedOrder.billing.address}}</p>
+						</div>
+						<div class="col-md-5">
+
+						</div>
+						<div class="col-md-4">
+							<span style="display: block;bottom: 0px;position: absolute;right: 15px;">
+								<p class="shopInfo" style="display:inline-block; font-weight:bold;">Pedido: </p>
+								<p class="shopInfo" style="display:inline-block">#{{selectedOrder.$key}}</p>
+							</span>
+							<span style="display: block;bottom: 1.4em;position: absolute;right: 15px;">
+								<p class="shopInfo" style="display:inline-block; font-weight:bold;">Fecha: </p>
+								<p class="shopInfo" style="display:inline-block">{{selectedOrder.time | amDateFormat:'LL'}}</p>
+							</span>
+						</div>
+					</div>
+					<div class="row" style="margin-top: 1.5em;">
+						<div class="col-md-12">
+							<div class="m-widget6">
+								<div class="m-widget6__head">
+									<div class="m-widget6__item">
+										<span class="m-widget6__caption">
+											Producto
+										</span>
+										<span class="m-widget6__caption">
+											Cantidad
+										</span>
+										<span class="m-widget6__caption m--align-right">
+											Valor
+										</span>
+									</div>
+								</div>
+								<div class="m-widget6__body">
+									<div *ngFor="let product of selectedOrder.cart" class="m-widget6__item">
+										<span class="m-widget6__text">
+											{{product.name}}
+											<p *ngFor="let option of product.options" style="display:block; margin-bottom: 0rem;font-size: 0.9em;">- {{option.answer}}</p>
+
+										</span>
+										<span class="m-widget6__text">
+											{{product.cant}}
+										</span>
+										<span class="m-widget6__text m--align-right m--font-boldest m--font-brand">
+											${{(product.cant * product.price).toFixed(2)}}
+										</span>
+									</div>
+
+									<div class="m-widget6__item">
+										<span class="m-widget6__text">
+										</span>
+
+										<span class="m-widget6__text">
+										</span>
+
+										<span class="m-widget6__text" style="font-weight:bold">
+											Total
+										</span>
+										<span class="m-widget6__text m--align-right m--font-boldest m--font-brand">
+											${{selectedOrder.products_total.toFixed(2)}}
+										</span>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+
+
+				</div>
+				<div class="modal-footer">
+					<div *ngIf="selectedOrder.status == 'pending'">
+						<button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="refuse()">
+							Rechazar
+						</button>
+						<button type="button" class="btn btn-primary" (click)="accept()">
+							Aceptar
+						</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!--end::Modal-->
 </div>
