--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,3 +6,8 @@
 .checkBoxAttention{
     margin-top: 0.65rem;
 }
+.shopInfo{
+    margin-top: 0px;
+    margin-bottom: 0px;
+    font-size: 0.9em;
+}
