--- a/src/app/theme/pages/default/profile/profile.component.html
+++ b/src/app/theme/pages/default/profile/profile.component.html
@@ -6,69 +6,7 @@
 				Mi perfil
 			</h3>
 		</div>
-		<div>
-			<div class="m-dropdown m-dropdown--inline m-dropdown--arrow m-dropdown--align-right m-dropdown--align-push" data-dropdown-toggle="hover"
-			 aria-expanded="true">
-				<a href="#" class="m-portlet__nav-link btn btn-lg btn-secondary  m-btn m-btn--outline-2x m-btn--air m-btn--icon m-btn--icon-only m-btn--pill  m-dropdown__toggle">
-					<i class="la la-plus m--hide"></i>
-					<i class="la la-ellipsis-h"></i>
-				</a>
-				<div class="m-dropdown__wrapper">
-					<span class="m-dropdown__arrow m-dropdown__arrow--right m-dropdown__arrow--adjust"></span>
-					<div class="m-dropdown__inner">
-						<div class="m-dropdown__body">
-							<div class="m-dropdown__content">
-								<ul class="m-nav">
-									<li class="m-nav__section m-nav__section--first m--hide">
-										<span class="m-nav__section-text">
-											Quick Actions
-										</span>
-									</li>
-									<li class="m-nav__item">
-										<a href="" class="m-nav__link">
-											<i class="m-nav__link-icon flaticon-share"></i>
-											<span class="m-nav__link-text">
-												Activity
-											</span>
-										</a>
-									</li>
-									<li class="m-nav__item">
-										<a href="" class="m-nav__link">
-											<i class="m-nav__link-icon flaticon-chat-1"></i>
-											<span class="m-nav__link-text">
-												Messages
-											</span>
-										</a>
-									</li>
-									<li class="m-nav__item">
-										<a href="" class="m-nav__link">
-											<i class="m-nav__link-icon flaticon-info"></i>
-											<span class="m-nav__link-text">
-												FAQ
-											</span>
-										</a>
-									</li>
-									<li class="m-nav__item">
-										<a href="" class="m-nav__link">
-											<i class="m-nav__link-icon flaticon-lifebuoy"></i>
-											<span class="m-nav__link-text">
-												Support
-											</span>
-										</a>
-									</li>
-									<li class="m-nav__separator m-nav__separator--fit"></li>
-									<li class="m-nav__item">
-										<a href="#" class="btn btn-outline-danger m-btn m-btn--pill m-btn--wide btn-sm">
-											Submit
-										</a>
-									</li>
-								</ul>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
+		
 	</div>
 </div>
 <!-- END: Subheader -->
@@ -159,102 +97,24 @@
 					<div class="m-portlet__head-tools">
 						<ul class="nav nav-tabs m-tabs m-tabs-line   m-tabs-line--left m-tabs-line--primary" role="tablist">
 							<li class="nav-item m-tabs__item">
-								<a class="nav-link m-tabs__link active" data-toggle="tab" href="#m_user_profile_tab_1" role="tab" (click)="loadMap(false)">
+								<a class="nav-link m-tabs__link active" id="tab1Ref" data-toggle="tab" href="#m_user_profile_tab_1" role="tab" (click)="loadMap(false)">
 									<i class="flaticon-share m--hide"></i>
 									Información
 								</a>
 							</li>
 							<li class="nav-item m-tabs__item">
-								<a class="nav-link m-tabs__link" data-toggle="tab" href="#m_user_profile_tab_2" role="tab" (click)="loadMap(false)">
+								<a class="nav-link m-tabs__link" id="tab2Ref" data-toggle="tab" href="#m_user_profile_tab_2" role="tab" (click)="loadMap(false)">
 									Horarios
 								</a>
 							</li>
 							<li class="nav-item m-tabs__item" (click)="loadMap(true)">
-								<a class="nav-link m-tabs__link" data-toggle="tab" href="#m_user_profile_tab_3" role="tab" >
+								<a class="nav-link m-tabs__link" id="tab3Ref" data-toggle="tab" href="#m_user_profile_tab_3" role="tab" >
 									Ubicación
 								</a>
 							</li>
 						</ul>
 					</div>
-					<div class="m-portlet__head-tools">
-						<ul class="m-portlet__nav">
-							<li class="m-portlet__nav-item">
-								<div class="m-dropdown m-dropdown--inline m-dropdown--arrow m-dropdown--align-right m-dropdown--align-push" data-dropdown-toggle="hover"
-								 aria-expanded="true">
-									<a href="#" class="m-portlet__nav-link btn btn-lg btn-secondary  m-btn m-btn--outline-2x m-btn--air m-btn--icon m-btn--icon-only m-btn--pill  m-dropdown__toggle">
-										<i class="la la-plus"></i>
-									</a>
-									<div class="m-dropdown__wrapper">
-										<span class="m-dropdown__arrow m-dropdown__arrow--right m-dropdown__arrow--adjust"></span>
-										<div class="m-dropdown__inner">
-											<div class="m-dropdown__body">
-												<div class="m-dropdown__content">
-													<ul class="m-nav">
-														<li class="m-nav__section m-nav__section--first">
-															<span class="m-nav__section-text">
-																Quick Actions
-															</span>
-														</li>
-														<li class="m-nav__item">
-															<a href="" class="m-nav__link">
-																<i class="m-nav__link-icon flaticon-share"></i>
-																<span class="m-nav__link-text">
-																	Create Post
-																</span>
-															</a>
-														</li>
-														<li class="m-nav__item">
-															<a href="" class="m-nav__link">
-																<i class="m-nav__link-icon flaticon-chat-1"></i>
-																<span class="m-nav__link-text">
-																	Send Messages
-																</span>
-															</a>
-														</li>
-														<li class="m-nav__item">
-															<a href="" class="m-nav__link">
-																<i class="m-nav__link-icon flaticon-multimedia-2"></i>
-																<span class="m-nav__link-text">
-																	Upload File
-																</span>
-															</a>
-														</li>
-														<li class="m-nav__section">
-															<span class="m-nav__section-text">
-																Useful Links
-															</span>
-														</li>
-														<li class="m-nav__item">
-															<a href="" class="m-nav__link">
-																<i class="m-nav__link-icon flaticon-info"></i>
-																<span class="m-nav__link-text">
-																	FAQ
-																</span>
-															</a>
-														</li>
-														<li class="m-nav__item">
-															<a href="" class="m-nav__link">
-																<i class="m-nav__link-icon flaticon-lifebuoy"></i>
-																<span class="m-nav__link-text">
-																	Support
-																</span>
-															</a>
-														</li>
-														<li class="m-nav__separator m-nav__separator--fit m--hide"></li>
-														<li class="m-nav__item m--hide">
-															<a href="#" class="btn btn-outline-danger m-btn m-btn--pill m-btn--wide btn-sm">
-																Submit
-															</a>
-														</li>
-													</ul>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-							</li>
-						</ul>
-					</div>
+					
 				</div>
 				<div class="tab-content">
 					<div class="tab-pane active" id="m_user_profile_tab_1">
@@ -341,6 +201,14 @@
 										</h3>
 									</div>
 								</div>
+								<div class="form-group m-form__group m--margin-top-10">
+										<div class="alert m-alert m-alert--default" role="alert">
+											Tanto el logo como el Banner son requeridos, el banner debe describir tu negocio en general y sus productos
+											<a class="m-link" routerLink="/components/icons/lineawesome">
+												Ver ejemplos de Banner
+											</a>
+										</div>
+									</div>
 								<div class="form-group m-form__group row">
 									<label for="example-text-input" class="col-2 col-form-label">
 										Logo
@@ -367,7 +235,7 @@
 										<div class="col-2"></div>
 										<div class="col-7">
 											<button type="submit" class="btn btn-accent m-btn m-btn--air m-btn--custom">
-												Guardar cambios
+												Guardar Ubicación
 											</button>
 											&nbsp;&nbsp;
 											<button type="reset" class="btn btn-secondary m-btn m-btn--air m-btn--custom">
@@ -385,7 +253,13 @@
 							<!--begin::Form-->
 							<form #timeForm (ngSubmit)="updateTime()" class="m-form m-form--fit m-form--label-align-right m-form--group-seperator-dashed">
 								<div class="m-portlet__body">
+										<div class="form-group m-form__group m--margin-top-10">
+												<div class="alert m-alert m-alert--default" role="alert">
+													Marca las casillas de los dias que esta abierto tu negocio y selecciona el intervalo de tiempo en cada uno (Hora de apertura y cierre).
+												</div>
+											</div>
 									<div class="form-group m-form__group row">
+										
 										<label class="col-lg-2 col-form-label">
 											Lunes:
 										</label>
